Kora/ingress-default-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kora-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  backend:
    serviceName: envoy-api-gateway
    servicePort: 80
